abstract class CoreEvent {}

class StartAppEvent extends CoreEvent {}
