import 'package:loco/loco.dart';

class ViewDependencies {
  Channel channel;
}
