import 'package:loco/loco.dart';
import 'package:loco_flutter/views.dart';

abstract class ViewsExtension<T> extends Extension<T> with Views {}
