import 'package:flutter/foundation.dart';

class ViewProps {
  final Key key;
  const ViewProps({this.key});
}
